syntax = "proto3";

// An enum of the different provisioning statuses.
enum IotProvisionStatus {
  Success = 0;            // The provisioning was successful.
  InvalidArgument = 1;    // The provisioning failed due to an invalid argument.
  InternalError = 2;      // The provisioning failed due to an internal error during processing.
}

// A request message for provisioning a device.
message  IotProvisionRequest {
  string server_url = 1;     // The hover server's URL.
  string device_name = 2;    // The devices name.
  string device_uuid = 3;    // The device's uuid.
  string timezone = 4;       // The device timezone.
}

// A response message of provisioning a device.
message IotProvisionResponse {
  IotProvisionStatus status = 1;   // The response status.
  string message = 2;              // The response message.
}